# crc-fast-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  lcov.info  libcrc_fast.h
benches/: software_bench.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compare_vs_crc.rs
scripts/: check.sh  verify_no_std.sh
src/: algorithm.rs  cache.rs  combine.rs  feature_detection.rs  ffi.rs  lib.rs
src/arch/: mod.rs  software.rs
src/crc32/fusion/x86/: mod.rs
src/crc64/: utils.rs
src/test/: future_proof_tests.rs
tests/: checksum_integration_tests.rs  no_std_compat.rs  real_no_std_test.rs  wasm_test.rs
